--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,70 @@
   background-color: #0d0620;
   height: 100vh;
 }
+
+.Header{
+  height: 80px;
+}
 .custom-nav{
   background-color: #0d0620;
   color: white;
+  
+}
+
+.search{
+  width: 28px;
+  cursor: pointer;
+  outline: 0;
+  position: relative;
+
+}
+
+.user{
+  width: 28px;
+  color: #ffffff;
+  height: 28px;
+  cursor: pointer;
+  z-index: 1;
+  border-radius: 100%;
+  background-color: transparent;
+}
+.Voot{
+  color: rgba(0, 0, 0, 0.87);
+    font-size: 0.875rem;
+    font-family: Rubik,sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-top: -16px;
+    margin-right: -22px;
 }
 
 
 .upgrade-button{
-  background-color: #29d4b6
+  width: auto;
+  color: #000000;
+  height: 26px;
+  position: fixed;
+  font-size: 12px;
+  object-fit: contain;
+  text-align: center;
+  font-style: normal;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  line-height: 10px;
+  border-radius: 2px;
+  letter-spacing: normal;
+  text-transform: none;
+  text-decoration: none;
+  background-color: #29d4b6;
+}
+
+
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    height: 32px;
 }
 .header-list{
   color: darkgrey;
@@ -86,9 +142,16 @@ max-width: 600px;
 .custom-chip{
   border: 1px solid white;
   border-radius: 20px;
-  padding: 2px 20px;
+  padding: 2px 10px;
   margin-right: 20px;
   margin-left: 20;
   height: 32px;
+  text-align: center;
+  width:200px;
+white-space: nowrap;
+/* text-overflow: ellipsis; */
+
 }
+
+
 
