--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 .App {  
   /* text-align: center; */
   background-color: #0d0620;
-  height: 100vh;
+  min-height: 100vh;
+  overflow: auto;
 }
 
 .Header{
@@ -44,10 +45,11 @@
 
 
 .upgrade-button{
-  width: auto;
+  /* width: auto; */
   color: #000000;
   height: 26px;
-  position: fixed;
+  top: 3px;
+  position: absolute;
   font-size: 12px;
   object-fit: contain;
   text-align: center;
@@ -62,6 +64,10 @@
   background-color: #29d4b6;
 }
 
+.line{
+  position: absolute;
+    margin-left: 30px;
+}
 
 button, input, optgroup, select, textarea {
     margin: 0;
@@ -123,11 +129,13 @@ max-width: 600px;
 .slider-image-container{
   border-radius: 10px;
   overflow: hidden;
+  
 }
-.slick-active{
-  /* border: 1px solid; */
 
+ul{
+  list-style-type: none;
 }
+
 .navbar {
   /* position: relative; */
   /* display: flex;
@@ -153,5 +161,135 @@ white-space: nowrap;
 
 }
 
+.flexiLayoutRail{
+  height: 254px;
+  width: 90%;
+  position: relative;
+  align-items: center;
+  box-sizing: border-box;
+  background-position: center;
+  border-radius: 10px;
+}
+
+.title {
+  color: #ffffff;
+  font-size: 20px;
+  padding-bottom:20px;
+  padding-top: 40px; 
+ 
+}
 
 
+
+
+/** Sidebar */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.sidebar-container {
+  display: flex;
+  flex : 2 ;
+}
+main {
+  padding: 10px;
+}
+
+.title {
+  font-size: 3rem;
+  display: grid;
+  place-items: center;
+}
+
+/* Sidebar */
+.sidebar {
+  background: rgb(0, 7, 61);
+  color: white;
+  height: 100vh;
+  overflow-y: auto;
+}
+
+.top_section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 10px;
+}
+.logo {
+  font-size: 18px;
+  line-height: 0;
+}
+.bars {
+  width: 30px;
+}
+.hide {
+  display: none;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+  height: 30px;
+  padding: 10px;
+}
+.search input {
+  border: none;
+  margin-left: 10px;
+  border-radius: 5px;
+  background: rgb(238, 238, 238);
+
+  color: white;
+}
+
+.routes {
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.link {
+  display: flex;
+  color: white;
+  gap: 10px;
+  padding: 5px 10px;
+  border-right: 4px solid transparent;
+  transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+.link:hover {
+  border-right: 4px solid white;
+  background: rgb(45, 51, 89);
+  transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+.active {
+  border-right: 4px solid white;
+  background: rgb(45, 51, 89);
+}
+.link_text {
+  white-space: nowrap;
+  font-size: 15px;
+}
+
+.menu {
+  display: flex;
+  color: white;
+
+  padding: 5px 10px;
+  border-right: 4px solid transparent;
+  transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  justify-content: space-between;
+}
+.menu_item {
+  display: flex;
+  gap: 10px;
+}
+.menu_container {
+  display: flex;
+  flex-direction: column;
+}
+.menu_container .link {
+  padding-left: 20px;
+  border-bottom: #fff 0.5px solid;
+}
